force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/QTB_Bill_Code_Product_Lookup__c.object-meta.xml
<CustomObject>
    <label>Bill Code Product Lookup</label>
    <nameField>
        <label>Bill Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Code Product Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>