force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/Primary_Product_for_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_for_Country__c</fullName>
    <label>Primary Product for Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>