force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Active__c.field-meta.xml
<CustomField>
    <fullName>QTB_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>