force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Billing_Type__c</fullName>
    <description>#SFCPQBLG: to differentiate the product based on type whether it is a leader or follower</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>