force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IM Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IM_Country__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>IM_Country__c</referenceTo>
    <relationshipLabel>Bill Code Product Lookup</relationshipLabel>
    <relationshipName>QTB_Bill_Code_Products</relationshipName>
    <type>Lookup</type>
</CustomField>