force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Default_Bill_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Default_Bill_Code_Description__c</fullName>
    <description>This field is used for Nordics Billing Countries line description population for Apix extract</description>
    <label>Default Bill Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>