force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>