force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Local_Bill_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>QTB_Local_Bill_Code_Description__c</fullName>
    <description>This field is for defining the Local language description for Bill code</description>
    <label>Local Bill Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>