force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Primary__c.field-meta.xml
<CustomField>
    <fullName>QTB_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>