force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Product2__c.field-meta.xml
<CustomField>
    <fullName>QTB_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bill Code Product Lookup</relationshipLabel>
    <relationshipName>QTB_Bill_Code_Products</relationshipName>
    <type>Lookup</type>
</CustomField>