force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Product_Code__c</fullName>
    <description>This will hold the value from Product2__r.Product code</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>