force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Source_Application__c.field-meta.xml
<CustomField>
    <fullName>QTB_Source_Application__c</fullName>
    <label>Source Application</label>
    <length>100</length>
    <type>Text</type>
</CustomField>