force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Source_Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Source_Bill_Code__c</fullName>
    <label>Source Bill Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>