force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_Storage__c.field-meta.xml
<CustomField>
    <fullName>QTB_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage</label>
    <type>Checkbox</type>
</CustomField>