force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/QTB_UOM__c.field-meta.xml
<CustomField>
    <fullName>QTB_UOM__c</fullName>
    <label>UOM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>