force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/fields/SB_Flat_Fee_Flag__c.field-meta.xml
<CustomField>
    <fullName>SB_Flat_Fee_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SB Flat Fee Flag</label>
    <type>Checkbox</type>
</CustomField>