force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_Source_Application__c</columns>
    <columns>QTB_Pricing_Bill_Code__c</columns>
    <columns>QTB_Primary__c</columns>
    <columns>QTB_Product2__c</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_Source_Bill_Code__c</columns>
    <columns>QTB_Billing_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>QTB_Active__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>QTB_Storage__c</columns>
    <columns>QTB_UOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>