force-app/main/default/objects/QTB_Bill_Code_Product_Lookup__c/listViews/my_view.listView-meta.xml
<ListView>
    <fullName>my_view</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QTB_Product2__c</field>
        <operation>equals</operation>
        <value>840</value>
    </filters>
    <label>my view</label>
</ListView>